Added route for skip functionality with sockets. Updated yaml file.
